--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: operator-name-cbs-widget
+Source: connui-home-cellular
 Priority: extra
 Maintainer: Pali Rohár <pali.rohar@gmail.com>
 Build-Depends: debhelper (>= 5), autotools-dev, autoconf, automake, libtool, libhildon1-dev, libhildondesktop1-dev, hildon-control-panel-dev, libgtk2.0-dev, libglib2.0-dev, libgconf2-dev, libosso-dev, libconnui-dev
@@ -14,12 +14,3 @@ Description: Cellular UI operator name home plugin
  .
  It has additional support for Cell Broadcast SMS
  which show for example Cellular network info.
-
-Package: operator-name-cbs-widget
-Architecture: armel
-Section: user/hidden
-Depends: connui-home-cellular
-Description: Transitional package
- This dummy package is provided for a smooth transition to the connui-home-cellular.
- .
- It may safely be removed after installation.
